[package]
name = "beatport-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query", "rustls"] }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "time"] }
url = "2"
webbrowser = "1"

[dev-dependencies]
tempfile = "3"
